[package]
name = "patchhive-product-core"
version = "0.1.0"
edition = "2021"
description = "Shared Rust backend primitives for PatchHive products."
license = "MIT"
repository = "https://github.com/patchhive/patchhive-product-core.git"
homepage = "https://github.com/patchhive/patchhive-product-core"
keywords = ["patchhive", "rust", "backend", "auth"]

[lib]
name = "patchhive_product_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
